2003-04-03  Trey Matteson  <trey@apple.com>

	3218212 REGRESSION: page on screen draws ugly while printing is happening

	Turn autodisplay of the window off while we print.

        Reviewed by Darin.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView beginDocument]):  Turn it off.
        (-[WebHTMLView endDocument]):  and back on.

2003-04-03  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	- removed no-longer forwarding of become/resignFirstResponder
	
        * WebView.subproj/WebHTMLViewPrivate.m: Removed
	become/resignFirstResponder poses for WebNSTextView.

2003-04-03  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Richard and Don.

        * WebView.subproj/WebDataProtocol.m:
	(-[NSURLRequest _webDataRequestParametersForWriting]): Renamed
	from _webDataRequestParameters.
        (-[NSURLRequest _webDataRequestParametersForReading]): Like the
	above, but make sure nto to create the part if it does not exist.
        (-[NSURLRequest _webDataRequestData]): Use _webDataRequestParametersForReading.
        (-[NSURLRequest _webDataRequestEncoding]): Likewise.
        (-[NSURLRequest _webDataRequestBaseURL]): Likewise.
        (-[NSURLRequest _webDataRequestSetData:]):Use _webDataRequestParametersForWriting.
        (-[NSURLRequest _webDataRequestSetEncoding:]): Likewise.
        (-[NSURLRequest _webDataRequestSetBaseURL:]): Likewise.
        (-[NSURLRequest _webDataRequestExternalRequest]): Use _webDataRequestParametersForReading.

2003-04-03  Richard Williamson   <rjw@apple.com>

        Tweaks to minimize access to the parts of a WebDataRequest
        that turn out to be slow.  Although we've changed NSURLRequest
        to be faster, it's still good to keep these tweaks.
        
        Reviewed by ken.

        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:willSendRequest:redirectResponse:]):